# behavior_planning

./: .gitignore  .gitmodules  README.md
Code/bt_workspace/: .gitignore
Code/bt_workspace/src/: bt_lidar_trace.fbl
Code/bt_workspace/src/bt/: CMakeLists.txt  package.xml
Code/bt_workspace/src/bt/config/: nav2_params.yaml  robot_battery.yaml  util_params.yaml
Code/bt_workspace/src/bt/include/: accel_to_normal_speed.hpp  battery_sufficient_check.hpp  bt_lidar.hpp  bt_rosbot.hpp  cancel_nav_goal.hpp  collision_check.hpp  complete_stop.hpp  decel_to_min_driving_speed.hpp  disable_cmd_vel_override.hpp  enable_cmd_vel_override.hpp  execution_checker.hpp  execution_checker_service.hpp  global_planner_execution_check.hpp  imu_execution_check.hpp  lidar_execution_check.hpp  load_updated_map.hpp  odom_execution_check.hpp  orientation_check.hpp  path_possible_check.hpp  publish_closer_goal.hpp  republish_last_goal.hpp  reset_occupancy_map.hpp  restart_global_planner.hpp  restart_imu.hpp  restart_lidar.hpp  restart_odom.hpp  reverse_cmd_vel.hpp  ros_node.hpp  save_updated_map.hpp  slam_execution_check.hpp  update_map_after_collision.hpp
Code/bt_workspace/src/bt/launch/: bt_lidar.launch.py  bt_rosbot.launch.py  bt_utils.launch.py  launch_global_planner.launch.py
Code/bt_workspace/src/bt/resources/: battery_bt.xml  bt.xml  cancel_nav_goal_bt.xml  collision_bt.xml  global_planner_bt.xml  imu_bt.xml  lidar_bt.xml  map_bt.xml  odom_bt.xml  rosbot_bt.xml  rosbot_bt_lite.xml  save_new_map.xml
Code/bt_workspace/src/bt/scripts/: ssh_lidar.sh  ssh_microros.sh
Code/bt_workspace/src/bt/src/: bt_lidar.cpp  bt_rosbot.cpp  bt_test.cpp  execution_checker_service.cpp
Code/bt_workspace/src/bt_msgs/: CMakeLists.txt  package.xml
Code/bt_workspace/src/bt_msgs/srv/: GetCharge.srv  GetDistance.srv  GetLastGoal.srv  GetLastMap.srv  GetPose.srv  GetTwistArray.srv  PubCmdVel.srv  SendUpdatedMap.srv
Code/bt_workspace/src/bt_tests/: CMakeLists.txt  package.xml
Code/bt_workspace/src/bt_tests/include/bt_tests/: scenario_1.hpp
Code/bt_workspace/src/bt_tests/src/: scenario1.cpp
Code/bt_workspace/src/cmd_vel_decision_gate/: CMakeLists.txt  package.xml
Code/bt_workspace/src/cmd_vel_decision_gate/include/cmd_vel_decision_gate/: cmd_vel_decision_gate.hpp
Code/bt_workspace/src/cmd_vel_decision_gate/src/: cmd_vel_decision_gate.cpp
Code/bt_workspace/src/gazebo_sensor_drivers/: CMakeLists.txt  package.xml
Code/bt_workspace/src/gazebo_sensor_drivers/launch/: sensor_drivers.launch.py
Code/bt_workspace/src/gazebo_sensor_drivers/src/: imu_driver.cpp  lidar_driver.cpp  odom_driver.cpp
Code/bt_workspace/src/robot_battery/: CMakeLists.txt  package.xml
Code/bt_workspace/src/robot_battery/include/robot_battery/: robot_battery.hpp
Code/bt_workspace/src/robot_battery/src/: robot_battery.cpp
Code/bt_workspace/src/sensor_data_backup/: CMakeLists.txt  package.xml
Code/bt_workspace/src/sensor_data_backup/include/sensor_data_backup/: sensor_data_backup.hpp
Code/bt_workspace/src/sensor_data_backup/src/: sensor_data_backup.cpp
Code/misc_files/: model.sdf  waffle.model
Paper/: paper.bib  paper.tex
Presentations/diagrams/: Architecture_Navigation.drawio  Architecture_watchdog.drawio  behaviour tree.drawio  detail_architecture_watch.drawio
Reports/Week 2/: weekly_report2.tex
Reports/Week5/: weekly_report5.aux  weekly_report5.tex
Reports/Week6/: scenarios.xlsx
Thesis/: thesis.aux  thesis.bbl  thesis.bib  thesis.blg  thesis.dvi  thesis.lof  thesis.lot  thesis.out  thesis.tex  thesis.toc
Thesis/images/: text.txt
Thesis/text/: abstract.tex  diskussion.tex  einleitung.tex  ergebnisse.tex  implementierung.tex  kurzfassung.tex  methoden.tex  titel.tex  verwandt.tex  vorwort.tex
